force-app/main/default/objects/Airport__c/fields/IATA_Codes__c.field-meta.xml
<CustomField>
    <fullName>IATA_Codes__c</fullName>
    <description>IATA Code for Airport identification</description>
    <label>IATA Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>