force-app/main/default/objects/Airport__c/validationRules/Latitude_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Latitude_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Latitude__c &lt; -90 || Latitude__c &gt; 90</errorConditionFormula>
    <errorMessage>The valid range for latitude values is from +90 to -90 degrees.</errorMessage>
</ValidationRule>