force-app/main/default/objects/Airport__c/validationRules/Longitude_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Longitude_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Longitude__c &lt; -180 || Longitude__c &gt; 180</errorConditionFormula>
    <errorMessage>The valid range for longitude values is from +180 to -180 degrees.</errorMessage>
</ValidationRule>